src/objects/ProjectDefinition__c.object
<CustomObject>
    <description>Container for Praying Mantis CI definition</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Namespace__c</fullName>
        <label>Namespace</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Name__c</fullName>
        <label>Package Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repo_Name__c</fullName>
        <label>Repository Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repo_Url__c</fullName>
        <label>Repository URL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>CI Project Definition</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Namespace__c</columns>
        <columns>Package_Name__c</columns>
        <columns>Repo_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CI Project Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Prevent_field_edits</fullName>
        <active>false</active>
        <errorConditionFormula>OR(ISCHANGED(Name), ISCHANGED(Repo_Name__c), ISCHANGED(Repo_Url__c))</errorConditionFormula>
        <errorMessage>Name and repo fields cannot be updated.</errorMessage>
    </validationRules>
</CustomObject>